--- a/PutovanjaMenadzerApp-war/nbproject/project.properties
+++ b/PutovanjaMenadzerApp-war/nbproject/project.properties
@@ -32,6 +32,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-fileupload-1.3.1.jar=..\\commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=..\\commons-io-2.4.jar
+file.reference.ui-lightness-1.0.10.jar=..\\ui-lightness-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,7 +51,8 @@ javac.classpath=\
     ${libs.PrimeFaces5.0.classpath}:\
     ${libs.Dom4J.classpath}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.ui-lightness-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -79,7 +81,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.PutovanjaMenadzerApp-ejb=../PutovanjaMenadzerApp-ejb
