--- a/PutovanjaMenadzerApp-war/web/WEB-INF/web.xml
+++ b/PutovanjaMenadzerApp-war/web/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
+        <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
@@ -31,7 +31,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/login.xhtml</welcome-file>
+        <welcome-file>stranice/login.xhtml</welcome-file>
     </welcome-file-list>
     <login-config>
         <auth-method>BASIC</auth-method>
